dataset1235/2025-2/805158916/users/2584427029/executions/2651470117_1462915504.log
== SUBMISSION (2025-08-20 13:03:54)
-- CODE: 
import math
lado = float(input())
apotema = lado/(2 *math.tan(math.pi/5))
área = (5*lado * apotema) / 2
print(f"{area:.2fa}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
             ^^^^
NameError: name 'area' is not defined. Did you mean: 'área'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
             ^^^^
NameError: name 'area' is not defined. Did you mean: 'área'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
             ^^^^
NameError: name 'area' is not defined. Did you mean: 'área'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
             ^^^^
NameError: name 'area' is not defined. Did you mean: 'área'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
             ^^^^
NameError: name 'area' is not defined. Did you mean: 'área'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
             ^^^^
NameError: name 'area' is not defined. Did you mean: 'área'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 13:05:46)
-- CODE: 
import math
lado = float(input())
apotema = lado/(2 *math.tan(math.pi/5))
area = (5 *lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 13:05:18)
-- CODE: 
import math
lado = float(input())
apotema = lado/(2 *math.tan(math.pi/5))
area = (5 *lado * apotema) / 2
print(f"{area:.2fa}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
          ^^^^^^^^^^^^^^
ValueError: Invalid format specifier '.2fa' for object of type 'float'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
          ^^^^^^^^^^^^^^
ValueError: Invalid format specifier '.2fa' for object of type 'float'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
          ^^^^^^^^^^^^^^
ValueError: Invalid format specifier '.2fa' for object of type 'float'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
          ^^^^^^^^^^^^^^
ValueError: Invalid format specifier '.2fa' for object of type 'float'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
          ^^^^^^^^^^^^^^
ValueError: Invalid format specifier '.2fa' for object of type 'float'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(f"{area:.2fa}")
          ^^^^^^^^^^^^^^
ValueError: Invalid format specifier '.2fa' for object of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 16:58:40)
-- CODE: 
from math import *
x = int(input())

apotema = x / 2*tan()(pi/5) 
area = 5/2 * x * apotema

print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = x / 2*tan()(pi/5) 
                    ^^^^^
TypeError: math.tan() takes exactly one argument (0 given)
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = x / 2*tan()(pi/5) 
                    ^^^^^
TypeError: math.tan() takes exactly one argument (0 given)
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = x / 2*tan()(pi/5) 
                    ^^^^^
TypeError: math.tan() takes exactly one argument (0 given)
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = x / 2*tan()(pi/5) 
                    ^^^^^
TypeError: math.tan() takes exactly one argument (0 given)
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = x / 2*tan()(pi/5) 
                    ^^^^^
TypeError: math.tan() takes exactly one argument (0 given)
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = x / 2*tan()(pi/5) 
                    ^^^^^
TypeError: math.tan() takes exactly one argument (0 given)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
